packages/fxa-content-server/app/styles/modules/_custom-rows.scss
/* Custom rows */
.description {
  font-size: $medium-font;
}

.links {
  clear: both;
  overflow: auto;
  // the 1px of padding allows the :focus outline on anchors to show.
  padding: 1px;
  text-align: center;

  + .extra-links {
    margin: 20px 0 15px 0;
  }

  .left {
    float: left;
    max-width: 50%;
    text-align: left;
  }

  .right {
    float: right;
    max-width: 50%;
    text-align: right;
  }

  .delayed-fadein {
    animation: fadein 1s linear 5s forwards;
    opacity: 0;
  }

  &.centered a:not(:only-child) {
    display: block;
    float: none;
    margin: 5px auto;
    max-width: 100%;
    padding-bottom: 10px;
    text-align: center;
    width: fit-content;
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

.extra-links + .links {
  margin-top: 20px;
}

ul.links {
  list-style: none;
  padding: 0;

  li {
    margin: 12px 0;
    padding: 0;
  }
}

.extra-links,
.extra-links a {
  color: $input-placeholder-color;
  margin-top: 20px;
  transition-duration: $short-transition;
}

.extra-links a:active,
.extra-links a:hover,
.extra-links a:focus {
  color: $link-color;
}

.verification-email-message,
.signed-in-email-message {
  word-wrap: break-word;
}

.customize-sync-row {
  color: $input-placeholder-color;
  margin-bottom: 10px !important;
}

.marketing-email-optin-row {
  color: $input-placeholder-color;

  @include respond-to('trustedUI') {
     font-size: 12px;
  }

  @include respond-to('small') {
    margin: 10px 0;
  }

  @include respond-to('big') {
    margin: 20px 0 10px 0;
  }

  .fxa-checkbox {
    line-height: 18px;
  }
}

.choose-what-to-sync-row,
.checkbox-row {
  text-align: left;

  label {
    display: inline;

    .fxa-checkbox__label {
      // The default is 0px, but -3px sets the label
      // properly in comparison to the checkbox.
      margin-top: -3px;
    }
  }
}

.change-password .password-row,
.complete-reset-password .password-row {
  margin-bottom: 15px;
}

.change-password .password-row:first-of-type,
.complete-reset-password .password-row:first-of-type {
  margin-bottom: 30px;
}

@include respond-to('small') {
  .extra-links,
  .links + .extra-links {
    font-size: $small-font;
    margin: 10px auto;
    max-width: 340px;
  }

  .links .left,
  .links .right {
    display: block;
    float: none;
    margin: 5px auto;
    max-width: 100%;
    text-align: center;
    width: fit-content;
  }
}

@include respond-to('trustedUI') {
  .links {
    margin: 0;
  }

  .extra-links,
  .links + .extra-links {
    margin: 5px auto;
  }
}

.small-label,
.label-helper {
  border-radius: $small-border-radius;
  color: $input-placeholder-color;
  font-size: $small-font;
  font-weight: normal;
  height: 16px;
  margin: 0 10px;
}

.show-password-label {
  background-color: $show-password-background-color;
  color: $show-password-label-color;
}

.password:focus ~ .show-password-label {
  color: $input-row-focus-border-color;
}

.password[type='text']:focus ~ .show-password-label {
  background-color: $input-row-focus-border-color;
  color: $show-password-focus-label-color;
}

.modal {
  .small-label,
  .label-helper {
    margin-left: 1px;
  }
}

.label-helper {
  position: absolute;
  top: 0;
  transition: top 400ms,
              color 450ms;
  z-index: 1;
}

#permissions {
  fieldset {
    border: 0;
    height: fit-content;
  }

  .avatar-wrapper {
    height: 50px;
    width: 50px;
  }

  .fxa-checkbox {
    color: $color-grey;
    height: auto;

    .fxa-checkbox__label {
      color: $color-grey-faint-text;
      font-size: 14px;
      margin-top: auto;
      /*from fxa-checkbox-repo, the padding needs to be 24px*/
      padding-left: 24px;
    }

    .fxa-checkbox__value {
      font-size: 18px;
      line-height: 18px;
      // email addresses can overflow the label and cause
      // the screen to be very wide. Break the addresses.
      word-break: break-all;
    }
  }
}

ul.permission-links {
  li {
    margin:  0;
    padding: 0;
  }
}

.two-col-items {
  column-width: 160px;
  margin: 20px 0 10px 0;

  .choose-what-to-sync-row {
    margin-bottom: 10px;
  }
}

